Correction Safari animation

--- a/angular/src/app/components/login/isb-animation.scss
+++ b/angular/src/app/components/login/isb-animation.scss
@@ -1,11 +1,11 @@
 #isb {
   opacity: 0;
-
   animation-name: fadeIn;
   animation-duration: 2s;
   animation-delay: 1s;
   animation-fill-mode: forwards;
 
+  -webkit-opacity: 0;
   -webkit-animation-name: fadeIn;
   -webkit-animation-duration: 2s;
   -webkit-animation-delay: 1s;
@@ -14,12 +14,12 @@
 
 #outly {
   opacity: 0;
-
   animation-name: fadeIn;
   animation-duration: 2s;
   animation-delay: 4s;
   animation-fill-mode: forwards;
 
+  -webkit-opacity: 0;
   -webkit-animation-name: fadeIn;
   -webkit-animation-duration: 2s;
   -webkit-animation-delay: 4s;
