--- a/angular/src/app/components/login/keyframes.scss
+++ b/angular/src/app/components/login/keyframes.scss
@@ -25,7 +25,6 @@
 
   100% {
     opacity: 0;
-    display: none;
   }
 }
 
